close but math bad

--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,18 +35,18 @@
     "y_train, y_test = np.eye(10)[y_train], np.eye(10)[y_test]\n",
     "\n",
     "# normalizing\n",
-    "# mean, std = x_train.mean(), x_train.std()\n",
-    "# x_train, x_test = (x_train - mean) / std, (x_test - mean) / std\n",
+    "mean, std = x_train.mean(), x_train.std()\n",
+    "x_train, x_test = (x_train - mean) / std, (x_test - mean) / std\n",
     "\n",
     "# standardizing\n",
-    "train_min, train_max = x_train.min(), x_train.max()\n",
-    "x_train = (x_train - train_min) / (train_max - train_min)\n",
-    "x_test = (x_test - train_min) / (train_max - train_min)\n"
+    "# train_min, train_max = x_train.min(), x_train.max()\n",
+    "# x_train = (x_train - train_min) / (train_max - train_min)\n",
+    "# x_test = (x_test - train_min) / (train_max - train_min)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.101"
+       "0.3388"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,12 +136,12 @@
     "def accuracy(y_true, y_pred):\n",
     "    return np.mean(np.argmax(y_true, axis=1) == np.argmax(y_pred, axis=1))\n",
     "\n",
-    "accuracy(y_train, model(Tensor(x_test)).data)"
+    "accuracy(y_test, model(Tensor(x_test)).data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -154,10 +154,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x112934200>"
+       "<matplotlib.image.AxesImage at 0x12184a570>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
