updated things that were obviously outdated

--- a/examples/assignment1_bonus.ipynb
+++ b/examples/assignment1_bonus.ipynb
@@ -265,8 +265,8 @@
    "source": [
     "class Model:\n",
     "    def __init__(self):\n",
-    "        self.w = Tensor.randn(3072, 10, std=0.01)\n",
-    "        self.b = Tensor.randn(10, std=0.01)\n",
+    "        self.w = Tensor.randn(3072, 10) * 0.01\n",
+    "        self.b = Tensor.randn(10) * 0.01\n",
     "        \n",
     "    def __call__(self, x):\n",
     "        return x @ self.w + self.b\n",
@@ -713,7 +713,7 @@
     "            x = Tensor(x_val[idxs])\n",
     "            y = Tensor(y_val[idxs])\n",
     "            y_hat_val = model(x)\n",
-    "            val_loss = ((1.0 - y) * (1.0 - y_hat).log()) + (y * y_hat.log()).sum().mean()\n",
+    "            val_loss = ((1.0 - y) * (1.0 - y_hat_val).log()) + (y * y_hat_val.log()).sum().mean()\n",
     "            val_loss += LAMBDA * ((model.w1 ** 2).sum().sum() + (model.w2 ** 2).sum().sum())\n",
     "            val_losses.append(val_loss.data)\n",
     "\n",
